--- a/.github/workflows/evaluate_volunteer_registration.yml
+++ b/.github/workflows/evaluate_volunteer_registration.yml
@@ -23,5 +23,5 @@ jobs:
         run: |
           echo hello.
           cat volunteersMap.json
-        working-directory: /data
+        working-directory: data
 
